project layout modification strong naming had to change the moq version so it works with mine

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-/build/
-.svn/
+obj
+bin
+_ReSharper.*
+*.csproj.user
+*.resharper.user
+*.resharper
+*.suo
+*.cache
+*~
+*.swp
+/Build
+NDependOut
+.svn
+*.chm
